--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "consolidate": "0.15.1",
     "dotenv": "6.0.0",
     "express": "4.16.3",
-    "nunjucks": "3.1.3"
+    "nunjucks": "3.1.3",
+    "ws": "5.2.1"
   },
   "devDependencies": {
     "nodemon": "1.17.5"
